--- a/build.gradle
+++ b/build.gradle
@@ -1,49 +1,59 @@
 buildscript {
+
     repositories {
+        google()
         mavenCentral()
     }
+
+    allprojects {
+        repositories {
+            google()
+            mavenCentral()
+            maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        }
+    }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.1'
+        classpath 'com.android.tools.build:gradle:8.1.4'
     }
 }
+
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.1'
+    compileSdk = 34
 
     sourceSets {
         main {
-            manifest.srcFile 'AndroidManifest.xml'
             java.srcDirs = ['src']
             resources.srcDirs = ['src']
             aidl.srcDirs = ['src']
             renderscript.srcDirs = ['src']
             res.srcDirs = ['res']
-            assets.srcDirs = ['assets']
         }
     }
 
     defaultConfig {
-        applicationId 'com.klinker.android.logger'
-        minSdkVersion 14
-        targetSdkVersion 21
+        minSdk = 29
+        targetSdk = 34
     }
 
     lintOptions {
         abortOnError false
     }
+
+    namespace 'com.klinker.android.logger'
 }
 
-android.libraryVariants.all { variant ->
-  def name = variant.buildType.name
-  if (name.equals(com.android.builder.core.BuilderConstants.DEBUG)) {
-    return; // Skip debug builds.
-  }
-  def task = project.tasks.create "jar${name.capitalize()}", Jar
-  task.dependsOn variant.javaCompile
-  task.from variant.javaCompile.destinationDir
-  artifacts.add('archives', task);
-}
-
-apply from: 'https://raw.github.com/klinker41/gradle-mvn-push/master/gradle-mvn-push.gradle'
+//tasks.create<Jar>("createJar") {
+//    archiveFileName.set("android-logger.jar") // Set the desired JAR file name
+//    from(android.sourceSets.getByName("main").java.srcDirs) // Include source files
+//    from(android.sourceSets.getByName("main").kotlin.srcDirs) // Include Kotlin source files (if applicable)
+//    exclude("**/R.class") // Exclude R class (optional)
+//    exclude("**/BuildConfig.class") // Exclude BuildConfig class (optional)
+//    destinationDirectory.set(file("$buildDir/libs")) // Set output directory
+//}
+//
+//tasks.named("assembleRelease") {
+//    dependsOn("createJar") // Make the 'assembleRelease' task depend on the 'createJar' task
+//}
